--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 6112",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "check": "npx tsc --noEmit",
+    "lint": "next lint",
+    "prettier": "prettier . --write"
   },
   "dependencies": {
     "@mantine/core": "^7.13.2",
@@ -28,9 +30,8 @@
     "@types/ramda": "^0.30.2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^9.12.0",
-    "eslint-config-next": "14.2.14",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.3.0",
     "postcss": "^8.4.47",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.13",
