--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
     "prettier": "prettier . --write"
   },
   "dependencies": {
-    "@mantine/core": "^7.13.2",
-    "@mantine/hooks": "^7.13.2",
+    "@mantine/core": "^8.0.0",
+    "@mantine/hooks": "^8.0.0",
     "@mantine/notifications": "^7.13.2",
     "@tabler/icons-react": "^3.19.0",
+    "@tanstack/react-virtual": "^3.13.8",
     "axios": "^1.7.7",
     "nanoid": "^5.0.7",
     "next": "14.2.14",
     "node-cache": "^5.1.2",
+    "p-limit": "^6.2.0",
     "ramda": "^0.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-use": "^17.6.0",
+    "sharp": "^0.34.1",
     "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
@@ -33,6 +37,8 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.3.0",
     "postcss": "^8.4.47",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
