--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "media-viewer",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev --port 6112",
@@ -15,19 +15,19 @@
     "@mantine/hooks": "^8.0.0",
     "@mantine/notifications": "^7.13.2",
     "@tabler/icons-react": "^3.19.0",
+    "@tailwindcss/postcss": "^4.1.6",
     "@tanstack/react-virtual": "^3.13.8",
     "axios": "^1.7.7",
+    "image-size": "^2.0.2",
     "nanoid": "^5.0.7",
     "next": "14.2.14",
     "node-cache": "^5.1.2",
-    "p-limit": "^6.2.0",
     "ramda": "^0.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-use": "^17.6.0",
-    "sharp": "^0.34.1",
-    "zustand": "5.0.0-rc.2"
+    "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^20.16.10",
@@ -40,7 +40,6 @@
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.5.3",
-    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   }
 }
