--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-use": "^17.6.0",
-    "tailwindcss": "^4.1.6"
+    "scroll-into-view-if-needed": "^3.1.0",
+    "tailwindcss": "^4.1.6",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.16.10",
